Fixes from Dan